--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,5 +9,7 @@
     <p><a href="about">About <%=shopData.shopName%></a></p>
     <p><a href="books/search">Search for books</a></p>
     <p><a href="users/register">Register with us</a></p>
+    <p><a href="books/list">See a list of our books</a></p>
+    <p><a href="books/addbook">Add a book to our database</a></p>
   </body>
 </html>
