--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,10 +7,12 @@
   <body>
     <h1>Register for <%=shopData.shopName%></h1>
     <form method="POST" action="registered">
-        <p>First name: <input id="first" type="text" name="first" /></p>
-        <p>Last name: <input id="last" type="text" name="last" /></p>
-        <p>Email: <input id="email" type="email" name="email" /></p>
-        <input type="submit" value="Register" />
+        <p>First name: <input id="first" type="text" name="first"/></p>
+        <p>Last name: <input id="last" type="text" name="last"/></p>
+        <p>Email: <input id="email" type="email" name="email"/></p>
+        <p>Username: <input id="username" type="text" name="username"/></p>
+        <p>Password: <input id="password" type="text" name="password"/></p>
+        <input type="submit" value="Register"/>
       </form>
   </body>
 </html>
