added fucntioning registration to add users to the database - added functional login page, checking passwords with the database

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,5 +12,6 @@
     <p><a href="books/list">See a list of our books</a></p>
     <p><a href="books/addbook">Add a book to our database</a></p>
     <p><a href="books/bargainbooks">Browse our bargain bin of books</a></p>
+    <p><a href="users/list"><%=shopData.shopName%> user directory</a></p>
   </body>
 </html>
